# FastAPIAsyncPGSQL-

./: .env  .gitignore  Dockerfile  Dockerfile.traefik  README.rst  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  traefik.prod.toml
app/: main.py
app/core/: config.py  engine.py
