[tool.poetry]
name = "FastAPIAsyncPgSQL"
version = "0.1.0"
description = ""
authors = ["Michael Chiang <chiangm5068@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
alembic = "^1.9.4"
black = "^23.1.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
